--- a/workshop_1/templates/photos/photo-details-page.html
+++ b/workshop_1/templates/photos/photo-details-page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'common/base.html' %}
 {% load static %}
 
 {% block content %}
@@ -17,7 +17,7 @@
                             <div class="profilepic">
                                 <div class="profile_img">
                                     <div class="image">
-                                        <img src="/static/images/person.png" alt="img8">
+                                        <img src="{% static '/images/person.png' %}" alt="img8">
                                     </div>
                                 </div>
                             </div>
@@ -33,21 +33,22 @@
                             </a>
                             <br>
 
-                            <!-- IF the photo has location -->
-                            <span>Bansko, Bulgaria</span>
+                            {% if photo.location %}
+                            <span>{{ photo.location }}</span>
+                            {% endif %}
 
                             <!-- IF the viewer is the creator of the photo -->
                             <div class="edit-delete-btns">
 
                                 <!-- Link to Edit Pet Photo Page -->
-                                <a href="#">
-                                    <img class="edit-img" src="/static/images/edit-pen-icon-6.jpg"
+                                <a href="{% url 'edit-photo' photo.pk %}">
+                                    <img class="edit-img" src="{% static '/images/edit-pen-icon-6.jpg' %}"
                                          alt="edit button">
                                 </a>
 
                                 <!-- Link to Delete Pet Photo Page -->
                                 <a href="#">
-                                    <img class="bin-img" src="/static/images/icon-remove-22.jpg" alt="bin button">
+                                    <img class="bin-img" src="{%  static '/images/icon-remove-22.jpg' %}" alt="bin button">
                                 </a>
                             </div>
                             <!-- End IF the viewer is the creator of the photo -->
@@ -75,11 +76,12 @@
                             <span class="heart">
 
                                     <!-- Link to Like Path -->
-                                    <a href="#">
-                                        <!-- if user has liked the photo -->
-                                        <!-- <i class="fa-solid fa-heart" style="color: #ed4040;"></i> -->
-                                        <!-- else -->
+                                    <a href="{% url 'like' photo.id %}">
+                                        {% if photo.like_set.all %}
+                                            <i class="fa-solid fa-heart" style="color: #ed4040;"></i>
+                                        {% else %}
                                         <i class="fa-regular fa-heart"></i>
+                                        {% endif %}
                                     </a>
                             </span>
                             <!-- End Like Button -->
@@ -87,7 +89,7 @@
                             <!-- Start Share  Button -->
 
                             <!-- Link to Share Path -->
-                            <a href="#">
+                            <a href="{% url 'share' photo.id %}">
                                 <i class="fa-solid fa-share"></i>
                             </a>
                         </div>
@@ -95,30 +97,26 @@
                     <!-- End Like and Share Buttons Section -->
 
                     <!-- Number of Likes for the Photo -->
-                    <p class="likes">203 likes</p>
+                    <p class="likes">{{ likes.count }}</p>
 
                     <!-- Start Tagged Pets Section-->
-                    <!-- Link to First Tagged Pet Details Page -->
-                    <a href="#">
+                    {% for pet in photo.tagged_pets.all %}
+                    <a href="{% url 'pet-details' "username" pet.slug %}">
                         <p class="message">
-                            <b>Sasho</b>
+                            <b>{{ pet.name }}</b>
                         </p>
                     </a>
-                    <!-- Link to Second Tagged Pet Details Page -->
-                    <a href="#">
-                        <p class="message">
-                            <b>Some other fish</b>
-                        </p>
-                    </a>
+                    {% endfor %}
                     <!-- End Tagged Pets Section-->
 
                     <!-- Photo description -->
-                    <p class="pet-details">This is my pet</p>
+                    <p class="pet-details">{{ photo.description }}</p>
 
                     <!-- Date of Publication or edit of the Photo -->
-                    <h5 class="postTime">19/09/2022</h5>
+                    <h5 class="postTime">{{ photo.date_of_publication }}</h5>
 
                     <!-- Start Comments Section -->
+                    {% for comment in comments %}
                     <div class="comments">
                         <div class="top">
                             <div class="userDetails">
@@ -127,7 +125,7 @@
                                         <div class="profile_img">
                                             <div class="image">
                                                 <!-- User Profile Image -->
-                                                <img src="/static/images/person.png" alt="img8">
+                                                <img src="{% static '/images/person.png' %}" alt="img8">
                                             </div>
                                         </div>
                                     </div>
@@ -136,13 +134,14 @@
                                         <!-- User First and/or Last Name or username-->
                                         <a href="">Steven Ivanov</a>
                                         <!-- User Comment -->
-                                        - OMG where can i get one
+                                        {{ comment.text }}
                                     </p>
                                 </div>
-                                <span>Sept. 20, 2022, 5:02 p.m.</span>
+                                <span>{{ comment.date_of_publication }}</span>
                             </div>
                         </div>
                     </div>
+                    {% endfor %}
                     <!-- End Comments Section -->
                 </div>
 
@@ -151,6 +150,7 @@
 
                     <!-- Start Add Comments Form -->
                     <form method="post" action="#">
+{#                        {% csrf_token %}#}
                         <label for="id_body">Body:</label>
                         <textarea name="body" cols="40" rows="10" placeholder="Add comment..." maxlength="300"
                                   required="" id="id_body"></textarea>
