--- a/workshop_1/templates/photos/photo-details-page.html
+++ b/workshop_1/templates/photos/photo-details-page.html
@@ -8,10 +8,7 @@
             <!-- Start Pet Photo Post Section -->
             <div class="card">
                 <div class="top">
-
-                    <!-- Start User Details and Image Location Section -->
                     <div class="userDetails">
-
                         <!-- Link to User Profile Details Page-->
                         <a href="#">
                             <div class="profilepic">
@@ -23,7 +20,6 @@
                             </div>
                         </a>
                         <h3>
-
                             <!-- Link to User Profile Details Page -->
                             <a href="#">
                                 <!-- IF user has first name and last name -->
@@ -34,7 +30,7 @@
                             <br>
 
                             {% if photo.location %}
-                            <span>{{ photo.location }}</span>
+                                <span>{{ photo.location }}</span>
                             {% endif %}
 
                             <!-- IF the viewer is the creator of the photo -->
@@ -47,7 +43,7 @@
                                 </a>
 
                                 <!-- Link to Delete Pet Photo Page -->
-                                <a href="#">
+                                <a href="{% url 'delete-photo' photo.pk %}">
                                     <img class="bin-img" src="{%  static '/images/icon-remove-22.jpg' %}" alt="bin button">
                                 </a>
                             </div>
@@ -62,7 +58,7 @@
                 <!-- Start Pet Photo -->
                 <div class="imgBx" id="place the id of the photo here">
                     <!-- Pet Photo -->
-                    <img src="/static/images/axolotl.jpeg" alt="post" class="cover">
+                    <img src="{{ photo.photo.url }}" alt="post" class="cover">
                 </div>
                 <!-- End Pet Photo -->
 
@@ -149,11 +145,9 @@
                 <div class="addComments">
 
                     <!-- Start Add Comments Form -->
-                    <form method="post" action="#">
-{#                        {% csrf_token %}#}
-                        <label for="id_body">Body:</label>
-                        <textarea name="body" cols="40" rows="10" placeholder="Add comment..." maxlength="300"
-                                  required="" id="id_body"></textarea>
+                    <form method="post" action="{% url 'comment' photo.id %}">
+                        {% csrf_token %}
+                        {{ comment_form }}
                         <!-- Post Comments Button -->
                         <button type="submit">Post</button>
                     </form>
