--- a/workshop_1/templates/common/home-page.html
+++ b/workshop_1/templates/common/home-page.html
@@ -18,10 +18,60 @@
         <div class="pet-posts">
             
             {% include 'common/pet-posts.html' %}
+        
+{#        <div class="step-links-buttons">#}
+{#            {% if all_photos.has_previous and all_photos.has_next %}#}
+{#                <a href="?page={{ all_photos.previous_page_number }}">#}
+{#                <i class="fa-solid fa-arrow-left"></i>#}
+{#                </a>#}
+{##}
+{#                <a href="?page={{ all_photos.next_page_number }}">#}
+{#                <i class="fa-solid fa-arrow-right"></i>#}
+{#                </a>#}
+{##}
+{#            {% elif all_photos.has_previous %}#}
+{#                <a href="?page={{ all_photos.previous_page_number }}">#}
+{#                <i class="fa-solid fa-arrow-left"></i>#}
+{#                </a>#}
+{##}
+{#            {% elif all_photos.has_next %}#}
+{#                <a href="?page={{ all_photos.next_page_number }}">#}
+{#                <i class="fa-solid fa-arrow-right"></i>#}
+{#                </a>#}
+{##}
+{#            {% endif %}#}
+{##}
+{#            {% if not all_photos %}#}
+{#                <img class="no-posts" src="{% static 'images/no_posts.png' %}" alt="no posts image">#}
+{#            {% endif %}#}
+{#        </div>#}
             
-            {% if not all_photos %}
+                    <div class="step-links-buttons">
+            {% if page_obj.has_previous and page_obj.has_next %}
+                <a href="?page={{ page_obj.previous_page_number }}">
+                <i class="fa-solid fa-arrow-left"></i>
+                </a>
+
+                <a href="?page={{ page_obj.next_page_number }}">
+                <i class="fa-solid fa-arrow-right"></i>
+                </a>
+
+            {% elif page_obj.has_previous %}
+                <a href="?page={{ page_obj.previous_page_number }}">
+                <i class="fa-solid fa-arrow-left"></i>
+                </a>
+
+            {% elif page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">
+                <i class="fa-solid fa-arrow-right"></i>
+                </a>
+
+            {% endif %}
+
+            {% if not page_obj %}
                 <img class="no-posts" src="{% static 'images/no_posts.png' %}" alt="no posts image">
             {% endif %}
+        </div>
         </div>    
 
         </div>
