--- a/workshop_1/templates/common/home-page.html
+++ b/workshop_1/templates/common/home-page.html
@@ -1,5 +1,6 @@
 {% extends 'common/base.html' %}
 {% load static %}
+{% load url_query_append %}
 
 {% block content %}
     <div class="container">
@@ -7,7 +8,6 @@
 
             <!-- Start Searchbar Form -->
             <form class="searchbar" method="get">
-                {% csrf_token %}
                 {{ search_form }}
                 <button>
                     <img src="{% static 'images/search.png' %}" height="18" alt="img2">
@@ -45,33 +45,39 @@
 {#                <img class="no-posts" src="{% static 'images/no_posts.png' %}" alt="no posts image">#}
 {#            {% endif %}#}
 {#        </div>#}
-            
-                    <div class="step-links-buttons">
-            {% if page_obj.has_previous and page_obj.has_next %}
-                <a href="?page={{ page_obj.previous_page_number }}">
-                <i class="fa-solid fa-arrow-left"></i>
-                </a>
+             <div class="pagination">
+                <span class="current">
+                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                </span>
 
-                <a href="?page={{ page_obj.next_page_number }}">
-                <i class="fa-solid fa-arrow-right"></i>
-                </a>
+                <span class="step-links-buttons">
 
-            {% elif page_obj.has_previous %}
-                <a href="?page={{ page_obj.previous_page_number }}">
-                <i class="fa-solid fa-arrow-left"></i>
-                </a>
+                    <!-- If there are previous and next photos -->
+                    {% if page_obj.has_previous and page_obj.has_next %}
+                        <a href="?{% url_query_append_tag request 'page' page_obj.previous_page_number %}">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </a>
+                        <a href="?{% url_query_append_tag request 'page' page_obj.next_page_number %}">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
 
-            {% elif page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">
-                <i class="fa-solid fa-arrow-right"></i>
-                </a>
+                    <!-- If there are only previous photos -->
+                    {% elif page_obj.has_previous %}
+                        <a href="?{% url_query_append_tag request 'page' page_obj.previous_page_number %}">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </a>
 
-            {% endif %}
+                    <!-- If there are only next photos -->
+                    {% elif page_obj.has_next %}
+                        <a href="?{% url_query_append_tag request 'page' page_obj.next_page_number %}">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                    {% endif %}
 
-            {% if not page_obj %}
-                <img class="no-posts" src="{% static 'images/no_posts.png' %}" alt="no posts image">
-            {% endif %}
-        </div>
+                </span>
+            </div>
+
+
         </div>    
 
         </div>
