--- a/workshop_1/templates/accounts/register-page.html
+++ b/workshop_1/templates/accounts/register-page.html
@@ -1,22 +1,23 @@
 {% extends 'common/base.html' %}
 {% load static %}
+{% load placeholder_filter %}
 
 {% block content %}
+
     <!-- Start Register Section -->
     <div class="login-register-div">
         <div class="login-register-box">
             <h1>Petstagram</h1>
 
             <!-- Start Register Form -->
-            <form action="">
-                <input type="text" placeholder="Username">
-
-                <input type="email" placeholder="Email">
-
-                <input type="password" placeholder="Password">
-
-                <input type="password" placeholder="Repeat Password">
-
+            <form action="" method="post">
+                {% csrf_token %}
+                {{ form.email|placeholder:'Email' }}
+                {{ form.email.errors }}
+                {{ form.password1|placeholder:'Password' }}
+                {{ form.password1.errors }}
+                {{ form.password2|placeholder:'Repeat Password' }}
+                {{ form.password2.errors }}
                 <!-- Register Button -->
                 <button type="submit">Register</button>
             </form>
@@ -26,7 +27,7 @@
         <div class="second-option">
 
             <!-- Link to Login Page -->
-            <p>Have an account? <a href="#">Log in</a></p>
+            <p>Have an account? <a href="{% url 'login' %}">Log in</a></p>
         </div>
     </div>
     <!-- End Register Section -->
