--- a/workshop_1/templates/common/nva-bar.html
+++ b/workshop_1/templates/common/nva-bar.html
@@ -46,18 +46,20 @@
                         </a>
                     </li>
                     <li class="nav-item">
-
+                    {% if request.user.is_authenticated %}
                         <!-- Link to Profile Page -->
-                        <a href="#">
+                        <a href="{% url 'profile-details' request.user.pk %}">
                             <i>Profile</i>
                         </a>
+                    {% endif %}    
                     </li>
                     <li class="nav-item">
 
                         <!-- Lpg out -->
-                        <a href="#">
-                            <i>Log out</i>
-                        </a>
+                        <form method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button class="button" type="submit" ><i>Logout</i></button>
+                        </form>
                     </li>
                 </ul>
             </div>
