--- a/workshop_1/templates/common/pet-posts.html
+++ b/workshop_1/templates/common/pet-posts.html
@@ -1,23 +1,30 @@
+{% load static %}
 {% for photo in all_photos %}
 
             <div class="card">
                 <div class="top">
                     <div class="userDetails">
                         <!-- Link to User Profile Page -->
-                        <a href="#">
+                        <a href="{% url 'profile-details' photo.user.pk %}">
                             <div class="profilepic">
                                 <div class="profile_img">
-                                    <div class="image">
-                                        <img src="/static/images/person.png" alt="img8">
-                                    </div>
+                                    {%  if photo.user.profile.profile_picture %}
+                                        <div class="image">
+                                            <img src="{{ photo.user.profile.profile_picture }}" alt="img8">
+                                        </div>
+                                    {% else %}
+                                        <div class="image">
+                                            <img src="{% static 'images/person.png'%}" alt="img8">
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </a>
                         <h3>
                             <!-- Link to User Profile Page -->
-                            <a href="#">
+                            <a href="{% url 'profile-details' photo.user.pk %}">
                                 <!-- if user has first name and last name -->
-                                Diyan Kalaydzhiev
+                                {{ photo.user.profile.get_full_name }}
                                 <!-- else -->
                                 <!-- show user username -->
                             </a>
