--- a/workshop_1/templates/photos/photo-details-page.html
+++ b/workshop_1/templates/photos/photo-details-page.html
@@ -10,20 +10,26 @@
                 <div class="top">
                     <div class="userDetails">
                         <!-- Link to User Profile Details Page-->
-                        <a href="#">
+                        <a href="{% url 'profile-details' photo.user.pk %}">
                             <div class="profilepic">
                                 <div class="profile_img">
-                                    <div class="image">
-                                        <img src="{% static '/images/person.png' %}" alt="img8">
-                                    </div>
+                                    {%  if photo.user.profile.profile_picture %}
+                                        <div class="image">
+                                            <img src="{{ photo.user.profile.profile_picture }}" alt="img8">
+                                        </div>
+                                    {% else %}
+                                        <div class="image">
+                                            <img src="{% static 'images/person.png'%}" alt="img8">
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </a>
                         <h3>
                             <!-- Link to User Profile Details Page -->
-                            <a href="#">
-                                <!-- IF user has first name and last name -->
-                                Diyan Kalaydzhiev
+                            <a href="{% url 'profile-details' photo.user.pk %}">
+                                <!-- if user has first name and last name -->
+                                {{ photo.user.profile.get_full_name }}
                                 <!-- else -->
                                 <!-- show user username -->
                             </a>
@@ -34,19 +40,21 @@
                             {% endif %}
 
                             <!-- IF the viewer is the creator of the photo -->
-                            <div class="edit-delete-btns">
-
-                                <!-- Link to Edit Pet Photo Page -->
-                                <a href="{% url 'edit-photo' photo.pk %}">
-                                    <img class="edit-img" src="{% static '/images/edit-pen-icon-6.jpg' %}"
-                                         alt="edit button">
-                                </a>
-
-                                <!-- Link to Delete Pet Photo Page -->
-                                <a href="{% url 'delete-photo' photo.pk %}">
-                                    <img class="bin-img" src="{%  static '/images/icon-remove-22.jpg' %}" alt="bin button">
-                                </a>
-                            </div>
+                                {% if request.user.pk == photo.user.pk %}
+                                <div class="edit-delete-btns">
+    
+                                    <!-- Link to Edit Pet Photo Page -->
+                                    <a href="{% url 'edit-photo' photo.pk %}">
+                                        <img class="edit-img" src="{% static '/images/edit-pen-icon-6.jpg' %}"
+                                             alt="edit button">
+                                    </a>
+    
+                                    <!-- Link to Delete Pet Photo Page -->
+                                    <a href="{% url 'delete-photo' photo.pk %}">
+                                        <img class="bin-img" src="{%  static '/images/icon-remove-22.jpg' %}" alt="bin button">
+                                    </a>
+                                </div>
+                            {% endif %}
                             <!-- End IF the viewer is the creator of the photo -->
 
                         </h3>
@@ -97,7 +105,7 @@
 
                     <!-- Start Tagged Pets Section-->
                     {% for pet in photo.tagged_pets.all %}
-                    <a href="{% url 'pet-details' "username" pet.slug %}">
+                    <a href="{% url 'pet-details' pet.user.profile.get_full_name|lower pet.slug %}">
                         <p class="message">
                             <b>{{ pet.name }}</b>
                         </p>
